# ray_tracing

./: .gitignore  CMakeLists.txt  README.md  build.txt  image.ppm  imgui.ini  src.rar
src/: camera.h  color.h  fullscreen.frag  fullscreen.vert  hittable.h  hittable_list.h  interval.h  main.cpp  material.h  ray.h  raytrace.comp  raytracer.h  sphere.h  vec3.h
